Fnal version off all examples execpt 7-2 (In9 sp.oo) and 9-1 (In 23 as there is still c2)

--- a/Examples/6_1_Energy_released_in_pullout_constant_bond_and_rigid_matrix.ipynb
+++ b/Examples/6_1_Energy_released_in_pullout_constant_bond_and_rigid_matrix.ipynb
@@ -560,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.limit((sp.diff(G,w) - sp.diff(W,w)), A_f, sp.oo)"
+    "sp.limit((sp.diff(G_w,w) - sp.diff(W_w,w)), A_f, sp.oo)"
    ]
   },
   {
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.diff(G.subs(data_f),w), sp.diff(W.subs(data_f),w)"
+    "sp.diff(G_w.subs(data_f),w), sp.diff(W_w.subs(data_f),w)"
    ]
   },
   {
@@ -578,7 +578,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "splot(sp.diff(G_w,w),(w,0,1))"
+    "G_w.subs(data_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splot(sp.diff(G_w.subs(data_f),w),(w,0,1))"
    ]
   }
  ],
